maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:6: error: not found: value cpt
	setIndication(coordBiscuit(0),coordBiscuit(1),cpt)
                                                      ^JediEscaper:8: error: not found: value hauteurMonde
		for(y <- 0 to hauteurMonde-1) {
                              ^JediEscaper:9: error: not found: value largeurMonde
      for(x <- 0 to largeurMonde-1) {
                    ^JediEscaper:26: error: not found: value hauteurMonde
  for (i <- 1 to hauteurMonde) {
                 ^JediEscaper:33: error: not found: value largeurMonde
    for (j <- 1 to largeurMonde) {
                   ^JediEscaper:48: error: not found: value cpt
  cpt =getIndication(x,y)+1
  ^JediEscaper:51: error: not found: value cpt
    	setIndication(x,y-1,cpt)
                            ^JediEscaper:56: error: not found: value cpt
    	setIndication(x-1,y,cpt)
                            ^JediEscaper:73: error: not found: value hauteurMonde
  for (y <- 0 to hauteurMonde-1) {
                 ^JediEscaper:74: error: not found: value largeurMonde
    for (x <- 0 to largeurMonde-1) {
                   ^JediEscaper:80: error: not found: value largeurMonde
  if (largeurMonde*hauteurMonde == compteur) {
      ^JediEscaper:80: error: not found: value hauteurMonde
  if (largeurMonde*hauteurMonde == compteur) {
                   ^